--- a/index.html
+++ b/index.html
@@ -43,100 +43,100 @@
   <div class="card">
   <div class="box">
     <img src="https://bagallery.com/cdn/shop/products/newlip3_2e9e78b5-41e8-43f6-a1f0-795f9dca19d0.png?v=1696696901" alt="">
-    <h3>T-Shirts</h3>
+    <h3>Lipstick</h3>
     <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
     <button>Order</button>
   </div>
   <div class="box">
     <img src="https://media.naheed.pk/catalog/product/cache/49dcd5d85f0fa4d590e132d0368d8132/1/2/1219277-1.jpg" alt="">
-    <h3>Products</h3>
+    <h3>Conceler</h3>
     <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
     <button>Order</button>
   </div>
   <div class="box">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoyobzuaRUyJHiFrBV9GJalooThQs8I8T_OQ&s" alt="">
-    <h3>T-Shirts</h3>
+    <h3>Mascara</h3>
     <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
     <button>Order</button>
   </div>
   <div class="box">
     <img src="https://reana.pk/cdn/shop/files/6_5f7cc9b4-abcc-42d3-9617-35608aead158.jpg?v=1695893246" alt="">
-    <h3>T-Shirts</h3>
+    <h3>Liner</h3>
     <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
     <button>Order</button>
   </div>
   <div class="card">
     <div class="box">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIDeeZ84zpFUaLhCbKbyJIYpkNE_8AzWBMLA&s" alt="">
-      <h3>T-Shirts</h3>
+      <h3>Powder</h3>
       <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
       <button>Order</button>
     </div>
     <div class="box">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwGMWnfOur5uXMIgit8gC6dGyk0XrQrpSxdA&s" alt="">
-      <h3>T-Shirts</h3>
+      <h3>Eyeshadow</h3>
       <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
       <button>Order</button>
     </div>
     <div class="box">
       <img src="https://m.media-amazon.com/images/I/71RzIY5CQ9S._SL1500_.jpg" alt="">
-      <h3>T-Shirts</h3>
+      <h3>Lip Pencil</h3>
       <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
       <button>Order</button>
     </div>
     <div class="box">
       <img src="https://chiltanpure.com/cdn/shop/files/aloe-vera-shampoo-soothes-itchy-scalp-boosts-hair-growth-prevents-hair-loss-dandruff-267215.jpg?v=1717770930" alt="">
-      <h3>T-Shirts</h3>
+      <h3>Shampoo</h3>
       <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
       <button>Order</button>
     </div>
     <div class="card">
       <div class="box">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRG7PTaZHbSB6EPb5tq_d6GdPSHH9vwrGbZw&s" alt="">
-        <h3>T-Shirts</h3>
+        <h3>Conditioner</h3>
         <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
         <button>Order</button>
       </div>
       <div class="box">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTICDmqG8NbRb6RXhQ7SjUuGRlcR0sPa889dA&s" alt="">
-        <h3>T-Shirts</h3>
+        <h3>Sunscreen</h3>
         <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
         <button>Order</button>
       </div>
       <div class="box">
         <img src="https://786cosmetics.pk/cdn/shop/files/Isfahan786CosmeticsSwatch_600x_a0dd1aa4-1e65-461d-972d-36f367d98138.webp?v=1721176028" alt="">
-        <h3>T-Shirts</h3>
+        <h3>Nail Polish</h3>
         <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
         <button>Order</button>
       </div>
       <div class="box">
         <img src="https://www.makeupcityshop.com/cdn/shop/products/Blush-OnDustyPink.jpg?v=1621861114" alt="">
-        <h3>T-Shirts</h3>
+        <h3>Blush On</h3>
         <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
         <button>Order</button>
       </div>
       <div class="card">
         <div class="box">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCL4p7F73q9lt9KycnjTY_QY-w9hS2-j_TAw&s" alt="">
-          <h3>T-Shirts</h3>
+          <h3>Brushes</h3>
           <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
           <button>Order</button>
         </div>
         <div class="box">
           <img src="https://i.pinimg.com/736x/75/cf/28/75cf282e6f627e1c40d91981ca00c093.jpg" alt="">
-          <h3>T-Shirts</h3>
+          <h3>Hair Bun</h3>
           <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
           <button>Order</button>
         </div>
         <div class="box">
           <img src="https://static.beautytocare.com/cdn-cgi/image/width=1600,height=1600,f=auto/media/catalog/product//m/a/maybelline-lifter-gloss-hyaluronic-acid-lip-gloss-003-moon-5-4ml_1.png" alt="">
-          <h3>T-Shirts</h3>
+          <h3>Lip Gloss</h3>
           <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
           <button>Order</button>
         </div>
         <div class="box">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUu0wEuhXcDXY0FLsk2eXk-ZcOk1rXovdZJw&s" alt="">
-          <h3>T-Shirts</h3>
+          <h3>Gliter Eye Shadow</h3>
           <p>rem, id cupiditate fugit consequuntur saepe quasi enim inventore tenetur.</p>
           <button>Order</button>
         </div>
